--- a/app/src/main/res/layout/item_products_list.xml
+++ b/app/src/main/res/layout/item_products_list.xml
@@ -17,8 +17,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="4dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="4dp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -27,7 +27,9 @@
                 <ImageView
                     android:id="@+id/iv_image"
                     android:layout_width="82dp"
-                    android:layout_height="82dp"/>
+                    android:layout_height="82dp"
+                    android:scaleType="fitXY"
+                    />
             </LinearLayout>
 
             <LinearLayout
